2007-08-12  Tim-Philipp Müller  <tim at centricular dot net>

	* MAINTAINERS:
	  Obscure e-mail addresses with spaces only, as suggested on
	  desktop-devel.

2007-08-09  Tim-Philipp Müller  <tim at centricular dot net>

	* MAINTAINERS:
	  Format maintainers file as requested by the sysadmins on
	  the gnome devel-announce mailing list.

2007-08-08  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/xmlrpc/Makefile.am:
	  Don't use absolute path from top_builddir for local target, make
	  isn't smart enough to recognise it's a local target which makes
	  the build fail when using make -j2 or similar.

2007-08-04  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c:
	  Add more info to docs about the implications of gnet_http_get()
	  and gnet_conn_http_run() running a main loop iterating the default
	  GLib main context.

2007-07-29  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* tests/Makefile.am:
	* tests/check/Makefile.am:
	* tests/check/gnet/gnetconnhttp.c:
	* tests/check/gnet/gnetinetaddr.c:
	* tests/check/gnet/gnetipv6.c:
	* tests/check/gnet/gnettcpsocket.c:
	* tests/conn_http_test.c:
	* tests/inetaddr_test.c:
	* tests/ipv6_test.c:
	* tests/tcp_test.c:
	  Move some more tests over to the check unit testing framework.

2007-07-28  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/Makefile.am:
	* tests/base64_test.c:
	* tests/check/Makefile.am:
	* tests/check/gnet/gnetbase64.c:
	* tests/check/gnet/gnethash.c:
	* tests/check/gnet/gnetpack.c:
	* tests/check/gnet/gnetunpack.c:
	* tests/check/gnet/gneturi.c:
	* tests/hash_test.c:
	* tests/pack_test.c:
	* tests/unpack_test.c:
	* tests/uri_test.c:
	  Migrate some of the existing unit tests over to the check unit
	  testing framework (will currently only be run if you do
	  'make check' in tests/check/). While we're at it, fix up packing
	  and unpacking checks for 64-bit platforms.

2007-07-28  Tim-Philipp Müller  <tim at centricular dot net>
